# ai-forge

./: .gitignore  .npmignore  CHANGELOG.md  README.md  SPEC.md  package.json  presentation.html  pyproject.toml  replace.py
.gitlab/: pull_request_template.md
backend-golang/: SKILLS.md
backend-golang/new-module/: SKILL.md
backend-golang/project-standards/: SKILL.md
backend-golang/standards/: dto-structs.md  error-handling.md  handler-service-repository.md  index.md  project-patterns.md
backend-nestjs/: SKILLS.md
backend-nestjs/new-migration/: SKILL.md
backend-nestjs/new-module/: SKILL.md
backend-nestjs/project-standards/: SKILL.md
backend-nestjs/standards/: company-standards.md  dto-standards.md  error-handling.md  folder-structure.md  general-development.md  index.md  prisma-postgres-standards.md
backend-nestjs/upgrade-prisma-v7/: SKILL.md
backend-node/: SKILLS.md
backend-node/new-module/: SKILL.md
backend-node/project-standards/: SKILL.md
backend-node/standards/: error-handling.md  index.md  project-patterns.md  router-service.md  validation-serialization.md
backend-team/: SKILLS.md
backend-team/create-pr/: SKILL.md
backend-team/project-standards/: SKILL.md
backend-team/standards/: auth-security.md  controllers-services.md  helpers.md  index.md  project-patterns.md
core/: guardrails.md  module-architecture.md  workflow.md
core_ai_prompts/: __init__.py
frontend-react/: SKILLS.md
frontend-vue/: SKILLS.md
standards/: git.md  index.md  naming.md  observability.md  security.md  testing.md
template-team/: SKILLS.md
(+22 files in other folders)
