[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "core-ai-forge"
version = "2.0.0"
description = "AI agent instructions (Claude Code, Codex) for internal teams."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Conube" },
]

[tool.hatch.build.targets.wheel]
packages = ["core_ai_prompts"]

[tool.hatch.build.targets.wheel.force-include]
"core" = "core_ai_prompts/core"
"standards" = "core_ai_prompts/standards"
"backend-nestjs" = "core_ai_prompts/backend-nestjs"
"backend-node" = "core_ai_prompts/backend-node"
"backend-golang" = "core_ai_prompts/backend-golang"
"frontend-react" = "core_ai_prompts/frontend-react"
"frontend-vue" = "core_ai_prompts/frontend-vue"
"template-team" = "core_ai_prompts/template-team"
